syntax = "proto3";
package panacea.oracle.key.v0;

option go_package = "github.com/medibloc/panacea-oracle/pb/key/v0";

import "google/api/annotations.proto";

service KeyService {
  rpc GetSecretKey(GetSecretKeyRequest) returns (GetSecretKeyResponse) {
    option (google.api.http) = {
      get: "/v0/secret-key"
    };
  }
}

message GetSecretKeyRequest {
  uint64 deal_id = 1;
  bytes data_hash = 2;
}

message GetSecretKeyResponse {
  bytes encrypted_secret_key = 1;
}